<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/expand"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        card_view:cardBackgroundColor="@color/tab_gray"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="20"
                android:gravity="start|center"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/课程"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/course_teacher"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="10"
                android:gravity="start|center"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/教师"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/hide_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">


                <TextView
                    android:id="@+id/tv_course_score"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/课程学分"
                    android:textColor="#b0bec5"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_course_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/课程ID"
                    android:textColor="#b0bec5" />

                <TextView
                    android:id="@+id/tv_full_course_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/课程名称"
                    android:textColor="#b0bec5"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_course_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/课程类别"
                    android:textColor="#b0bec5" />

                <TextView
                    android:id="@+id/tv_course_place"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/课程地点"
                    android:textColor="#b0bec5" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    card_view:cardBackgroundColor="@color/tab_gray"
                    card_view:cardCornerRadius="14dp"
                    card_view:cardElevation="3dp">
                    <Button
                        android:id="@+id/circularButton1"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:text="@string/查看評論"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>